tests/examples/error_unclosed_string.stderr

  × errors occured while parsing

Error: kdl::unclosed_string (https://docs.rs/kdl-visit/latest/kdl_visit/enum.ParseError.html#variant.UnclosedString)

  × unclosed string
   ╭────
 1 │ "unclosed
   · ┬
   · ╰── opened here
   ╰────
